Updated with suggestion from customer

--- a/okna-v.html
+++ b/okna-v.html
@@ -333,9 +333,8 @@
                         <div class="footer-head">
                             <h4>Informacje kontaktowe</h4>
                             <div class="footer-contacts">
-                                <p><span>Tel:</span> 85 655 36 00<br/>
-                                <p><span>Tel:</span> 85 656 08 42<br/>
-                                <p><span>Fax:</span> 85 655 54 73<br/>
+                                <p><span>Tel hurtownia:</span> 503025033<br/>
+                                <p><span>Tel salon:</span> 856553600<br/>
                                 <p><span>Email:</span> hapb@wp.pl<br/>
                                 <p><span>Godziny pracy:</span> Pn-Pt 7:00-17:00, Sob 7:00-14:00</p>
                             </div>
