--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                         <div class="single-icon">
                             <i class="fa fa-mobile"></i>
                             <p>
-                                Tel: 85 655 36 00 <br/>
-                                Tel: 85 656 08 42
+                                Tel hurtownia: 503025033<br/>
+                                Tel salon: 856560842
                             </p>
                         </div>
                     </div>
@@ -437,7 +437,7 @@
                     <div class="form contact-form">
                         <div id="sendmessage">Twoja wiadomość została wysłana. Dziękujemy za kontakt.</div>
                         <div id="errormessage"></div>
-                        <form action="" method="post" role="form" class="contactForm">
+                        <form action="contactform/contactform.php" method="post" role="form" class="contactForm">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name"
                                        placeholder="Twoje imię i nazwisko" data-rule="minlen:4"
@@ -530,9 +530,8 @@
                         <div class="footer-head">
                             <h4>Informacje kontaktowe</h4>
                             <div class="footer-contacts">
-                                <p><span>Tel:</span> 85 655 36 00<br/>
-                                <p><span>Tel:</span> 85 656 08 42<br/>
-                                <p><span>Fax:</span> 85 655 54 73<br/>
+                                <p><span>Tel hurtownia:</span> 503025033<br/>
+                                <p><span>Tel salon:</span> 856553600<br/>
                                 <p><span>Email:</span> hapb@wp.pl<br/>
                                 <p><span>Godziny pracy:</span> Pn-Pt 7:00-17:00, Sob 7:00-14:00</p>
                             </div>
