Updated with suggestion from customer

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     <div class="form contact-form">
                         <div id="sendmessage">Twoja wiadomość została wysłana. Dziękujemy za kontakt.</div>
                         <div id="errormessage"></div>
-                        <form action="contactform/contactform.php" method="post" role="form" class="contactForm">
+                        <form action="https://piaggi.github.io/contactform/contactform.php" method="post" role="form" class="contactForm">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name"
                                        placeholder="Twoje imię i nazwisko" data-rule="minlen:4"
