--- a/okna-v.html
+++ b/okna-v.html
@@ -125,13 +125,13 @@
                             </div>
                             <!-- layer 2 -->
                             <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                                <h1 class="title2">Lepiej nie mogłeś trafić!</h1>
+                                <h1 class="title2">Lepiej nie mogłeś trafić! U nas znajdziesz wszystkie potrzebne materiały.</h1>
                             </div>
                             <!-- layer 3 -->
                             <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                                <a class="ready-btn right-btn page-scroll" href="index.html#hurt">Hurtownia artykułów
+                                <a class="ready-btn right-btn page-scroll" href="#hurt">Hurtownia artykułów
                                     budowlanych</a>
-                                <a class="ready-btn page-scroll" href="index.html#contact">Kontakt</a>
+                                <a class="ready-btn page-scroll" href="#contact">Kontakt</a>
                             </div>
                         </div>
                     </div>
@@ -151,12 +151,12 @@
                             </div>
                             <!-- layer 2 -->
                             <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                                <h1 class="title2">Żaden problem z nami wyczarujesz przedsionek raju!</h1>
+                                <h1 class="title2">Żaden problem z nami wyczarujesz łazienkę swoich marzeń!</h1>
                             </div>
                             <!-- layer 3 -->
                             <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                                <a class="ready-btn right-btn page-scroll" href="index.html#salon">Salon łazienek</a>
-                                <a class="ready-btn page-scroll" href="index.html#contact">Kontakt</a>
+                                <a class="ready-btn right-btn page-scroll" href="#salon">Salon łazienek</a>
+                                <a class="ready-btn page-scroll" href="#contact">Kontakt</a>
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,6 @@
         </div>
     </div>
 </div>
-<!-- End Slider Area -->
 
 <!-- Start Wellcome Area -->
 <div class="wellcome-area">
