--- a/okna-v.html
+++ b/okna-v.html
@@ -129,9 +129,9 @@
                             </div>
                             <!-- layer 3 -->
                             <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                                <a class="ready-btn right-btn page-scroll" href="#hurt">Hurtownia artykułów
+                                <a class="ready-btn right-btn page-scroll" href="index.html#hurt">Hurtownia artykułów
                                     budowlanych</a>
-                                <a class="ready-btn page-scroll" href="#contact">Kontakt</a>
+                                <a class="ready-btn page-scroll" href="index.html#contact">Kontakt</a>
                             </div>
                         </div>
                     </div>
@@ -155,8 +155,8 @@
                             </div>
                             <!-- layer 3 -->
                             <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                                <a class="ready-btn right-btn page-scroll" href="#salon">Salon łazienek</a>
-                                <a class="ready-btn page-scroll" href="#contact">Kontakt</a>
+                                <a class="ready-btn right-btn page-scroll" href="index.html#salon">Salon łazienek</a>
+                                <a class="ready-btn page-scroll" href="index.html#contact">Kontakt</a>
                             </div>
                         </div>
                     </div>
