Update the rodo content

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                             </div>
                             <!-- layer 2 -->
                             <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                                <h1 class="title2">Lepiej nie mogłeś trafić! U nas znajdziesz wszystkie potrzebne materiały.</h1>
+                                <h1 class="title2">Lepiej nie mogłeś trafić! U nas znajdziesz wszystkie potrzebne
+                                    materiały.</h1>
                             </div>
                             <!-- layer 3 -->
                             <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -437,7 +438,8 @@
                     <div class="form contact-form">
                         <div id="sendmessage">Twoja wiadomość została wysłana. Dziękujemy za kontakt.</div>
                         <div id="errormessage"></div>
-                        <form action="https://piaggi.github.io/contactform/contactform.php" method="post" role="form" class="contactForm">
+                        <form action="https://piaggi.github.io/contactform/contactform.php" method="post" role="form"
+                              class="contactForm">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name"
                                        placeholder="Twoje imię i nazwisko" data-rule="minlen:4"
@@ -468,12 +470,10 @@
                                        data-msg="Proszę zaakceptować wymaganą zgodę..."/>
                                 <div class="validation"></div>
                                 <label class="form-check-label" for="contact-agreement" id="contact-agreement-label">"Wyrażam
-                                    zgodę na przetwarzanie
-                                    moich danych osobowych przez firmę HURTOWNIA ARTYKUŁÓW
+                                    zgodę na przetwarzanie moich danych osobowych przez firmę HURTOWNIA ARTYKUŁÓW
                                     PRZEMYSŁOWO-BUDOWLANYCH JERZY SAPIEŻKO z siedzibą w Siemiatyczach, ul. Annopolska
-                                    21,17-300 Siemiatycze w celu kontaktu przedstawiciela Spółki i udzielenia odpowiedzi
-                                    na
-                                    wiadomość przesłaną za pośrednictwem formularza kontaktowego."</label>
+                                    21,17-300 Siemiatycze w celu kontaktu przedstawiciela firmy i udzielenia odpowiedzi
+                                    na wiadomość przesłaną za pośrednictwem formularza kontaktowego."</label>
                             </div>
                             <div class="text-center">
                                 <button type="submit">Wyślij wiadomość</button>
