--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="My resume.">
+  <meta name="description" content="Home page">
   <meta name="author" content="Paweł Matujewicz">
 
-  <title>Paweł Matujewicz - Resume</title>
+  <title>Paweł Matujewicz</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
